--- a/FrontEnd/HTML/Pages/Pag_Suscripccion.html
+++ b/FrontEnd/HTML/Pages/Pag_Suscripccion.html
@@ -15,6 +15,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+    <script src="/FrontEnd/JavaScript/suscripcion.js"></script>
 </head>
 <body> <!-- Cuerpo del codigo -->
     <header> <!-- Cabeza del codigo -->
@@ -37,6 +38,16 @@
         </nav><br>
 
         <h1>Suscripciones</h1><br>
+
+        <form id="suscripcion-form">
+            <label for="tipo_suscripcion">Tipo de Suscripción:</label>
+            <select id="tipo_suscripcion" name="tipo_suscripcion">
+                <option value="M">Mensual $10 Dolares</option>
+                <option value="A">Anual $60 Dolares</option>
+            </select>
+            <button type="button" onclick="enviarSuscripcion()">Suscribirse</button>
+        </form>
+
         <!-- Inicio Tipo Suscripcciones -->
         <div class="container text-center">
             <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -46,7 +57,7 @@
                         <img src="/FrontEnd/Images/LogoMangaMania.png" class="card-img-top" alt="LogoMangaMania">
                         <div class="card-body">
                           <h5 class="card-title">Gratuita</h5>
-                          <a href="/FrontEnd/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Suscribirse</a>
+                          <a href="..." class="btn btn-primary">Suscribirse</a>
                         </div>
                       </div>
                 </div>
@@ -56,7 +67,7 @@
                         <img src="/FrontEnd/Images/LogoMangaMania.png" class="card-img-top" alt="LogoMangaMania">
                         <div class="card-body">
                           <h5 class="card-title">Mensual - $10.00</h5>
-                          <a href="/FrontEnd/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Suscribirse</a>
+                          <a href="..." class="btn btn-primary">Suscribirse</a>
                         </div>
                       </div>
                 </div>
@@ -66,7 +77,7 @@
                         <img src="/FrontEnd/Images/LogoMangaMania.png" class="card-img-top" alt="LogoMangaMania">
                         <div class="card-body">
                           <h5 class="card-title">Anual - $60.00</h5>
-                          <a href="/FrontEnd/HTML/Mangas/NarutoTomos.html" class="btn btn-primary">Suscribirse</a>
+                          <a href="..." class="btn btn-primary">Suscribirse</a>
                         </div>
                       </div>
                 </div>
@@ -77,7 +88,7 @@
          <hr>
          <!-- Inicio Suscripcciones Registrados -->
         <div class="container">
-            <h3>Comentarios Registrados</h3>
+            <h3>Suscripcciones Registrados</h3>
             <table id="comentariosTable" class="table">
                 <thead>
                     <tr>
